1.3.3/sv-ingress-test-1.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-test-1
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: ingress-test-1
  type: ClusterIP

...
