1.3.3/sv-ingress-test-2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-test-2
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: ingress-test-2
  type: NodePort

...
